[tool.poetry]
name = "biblio"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.scripts]
biblio = "biblio.__main__:cli"

[tool.poetry.dependencies]
python = "^3.11,<3.12"
pydantic = "^2.7.0"
networkx = "^3.3"
pillow = "^10.3.0"
ipython = "^8.23.0"
matplotlib = "^3.8.4"
semanticscholar = "^0.8.0"
environs = "^11.0.0"
tqdm = "^4.66.4"
pygraphviz = "^1.12"
pandas = "^2.2.2"
plotly = "^5.22.0"
requests = "^2.32.3"
nltk = "^3.8.1"
scikit-learn = "^1.5.0"
sentence-transformers = "^3.0.0"
langdetect = "^1.0.9"
openai = "^1.30.5"
hdbscan = "^0.8.36"
click = "^8.1.7"

[tool.poetry.group.lint.dependencies]
ruff = "^0.4.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"


[tool.poetry.group.typing.dependencies]
pyright = "^1.1.365"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
